--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@ List Faucet
   
 
   
-      <div class="item">
-    <img src="/file/cp.png" alt="Coinpayz">
-    <h2>Coinpayz</h2>
+  <div class="item">
+    <img src="/file/ebi.ico" alt="Earnfreebtc">
+    <h2>Earn FreeBTC</h2>
     <div class="description">
-      <p>$0.0005+ every 5 minutes. Easy captcha.</p>
-      <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
-      <p>$0.05 minimum payout to FaucetPay, Payeer and Wallet.</p>
-     <a href="https://coinpayz.xyz/?r=155318" class="button">Join now</a>
+      <p>$0.0006 every 5 minutes.</p>
+      <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
+      <p>$0.001 minimum payout to FaucetPay.</p>
+     <a href="https://earnfreebtc.io/?r=7382" class="button">Join now</a>
     </div>
   </div>
   
@@ -267,6 +267,17 @@ List Faucet
       <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
       <p>$0.05 minimum payout to FaucetPay and Binance.</p>
      <a href="https://faucetspeedbtc.com/?r=11499" class="button">Join now</a>
+    </div>
+  </div>
+  
+        <div class="item">
+    <img src="/file/cp.png" alt="Coinpayz">
+    <h2>Coinpayz</h2>
+    <div class="description">
+      <p>$0.0005+ every 5 minutes. Easy captcha.</p>
+      <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
+      <p>$0.05 minimum payout to FaucetPay, Payeer and Wallet.</p>
+     <a href="https://coinpayz.xyz/?r=155318" class="button">Join now</a>
     </div>
   </div>
   
@@ -355,18 +366,7 @@ List Faucet
     </div>
   </div>
   
-  
-  
-        <div class="item">
-    <img src="/file/oop.png" alt="Whoopy">
-    <h2>Whoopy Rewards</h2>
-    <div class="description">
-      <p>$0.00045 every 4 minutes.</p>
-      <p>Daily bonus, Coupon, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.3 minimum payout to FaucetPay.</p>
-     <a href="https://whoopyrewards.com/?r=6076" class="button">Join now</a>
-    </div>
-  </div>
+
   
        <div class="item">
     <img src="/file/final.png" alt="dutchy">
