--- a/index.html
+++ b/index.html
@@ -392,6 +392,17 @@ List Faucet
   </div>
   
        <div class="item">
+    <img src="/file/cc.svg" alt="Claimer Corner">
+    <h2>Claimer Corner</h2> 
+    <div class="description">
+      <p>$0.0005 every 5 minutes.</p>
+      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.1 minimum payout.</p>
+     <a href="https://claimercorner.xyz/web/?r=63714" class="button">Join now</a>
+    </div>
+  </div>
+  
+       <div class="item">
     <img src="/file/xtra.png" alt="xtrabits">
     <h2>Xtrabit</h2> 
     <div class="description">
@@ -399,17 +410,6 @@ List Faucet
       <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
       <p>$0.1 minimum payout.</p>
      <a href="https://xtrabits.click/?r=17371" class="button">Join now</a>
-    </div>
-  </div>
-  
-        <div class="item">
-    <img src="/file/flove.png" alt="Faucetlovin">
-    <h2>Faucet Lovin</h2>
-    <div class="description">
-      <p>1 satoshi every 5 minutes.</p>
-      <p>PTC, Shortlinks and Offerwalls.</p>
-      <p>1 satoshi minimum payout to FaucetPay.</p>
-     <a href="https://faucetlovin.com/ref/listfaucet.com" class="button">Join now</a>
     </div>
   </div>
 
