--- a/index.html
+++ b/index.html
@@ -221,6 +221,16 @@ List Faucet
     </div>
   </div>
 
+         <div class="item">
+    <img src="/file/rfa.png" alt="Rfaucet">
+    <h2>Rfaucet</h2> 
+    <div class="description">
+      <p>$0.001 every 5 mins</p>
+      <p>Tasks, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.015 minimum payout to faucetpay and cwallet.</p>
+     <a href="https://rfaucet.com/?ref=IMzL" class="button">Join now</a>
+    </div>
+  </div>
   
   <div class="item">
     <img src="/file/ebi.ico" alt="Earnfreebtc">
@@ -369,16 +379,7 @@ List Faucet
   
 
   
-       <div class="item">
-    <img src="/file/final.png" alt="dutchy">
-    <h2>Final Autoclaim</h2> 
-    <div class="description">
-      <p>30 minute token and coin faucet.</p>
-      <p>70+ coins, Shortlinks, PTC, Offerwalls.</p>
-      <p>Multiple ways to withdraw.</p>
-     <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="button">Join now</a>
-    </div>
-  </div>
+
   
         <div class="item">
     <img src="/file/bad.ico" alt="Btcadspace">
