--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ List Faucet
     <img src="/file/ooter.png" alt="SpaceShooter">
     <h2>Space Shooter</h2>
     <div class="description">
-      <p>$0.0008 every 5 minutes.</p>
+      <p>$0.0008 every 5 minutes. Need to do 3 shortlinks to continue faucet.</p>
       <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
       <p>$0.001 minimum payout to FaucetPay.</p>
      <a href="https://spaceshooter.net/?r=28035" class="button">Join now</a>
@@ -225,7 +225,7 @@ List Faucet
     <img src="/file/rfa.png" alt="Rfaucet">
     <h2>Rfaucet</h2> 
     <div class="description">
-      <p>$0.001 every 5 mins</p>
+      <p>$0.0005 every 4 mins. Shown as XRP but paid in multiple coins.</p>
       <p>Tasks, Shortlinks, PTC, Offerwalls.</p>
       <p>$0.015 minimum payout to faucetpay and cwallet.</p>
      <a href="https://rfaucet.com/?ref=IMzL" class="button">Join now</a>
@@ -238,7 +238,7 @@ List Faucet
     <div class="description">
       <p>$0.0006 every 5 minutes.</p>
       <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
-      <p>$0.01 minimum payout to FaucetPay.</p>
+      <p>$0.01 minimum payout to FaucetPay. Manual payment.</p>
      <a href="https://earnfreebtc.io/?r=7382" class="button">Join now</a>
     </div>
   </div>
@@ -258,28 +258,6 @@ List Faucet
     </div>
   </div>
   
-
-   
-              <div class="item">
-    <img src="/file/cv.ico" alt="cryptovie">
-            <h2>Crypto Vie</h2>
-    <div class="description">
-       <p>$0.0007 every 4 minutes.</p>
-      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.01 minimum payout to FaucetPay.</p>
-     <a href="https://cryptoviefaucet.com/?r=1787" class="button">Join now</a>
-    </div></div>
-  
-         <div class="item">
-    <img src="/file/fs.png" alt="Faucetspeedbtc">
-    <h2>Faucet Speed BTC</h2>
-    <div class="description">
-      <p>$0.0006+ every 4 minutes. RecaptchaV3</p>
-      <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
-      <p>$0.05 minimum payout to FaucetPay and Binance.</p>
-     <a href="https://faucetspeedbtc.com/?r=11499" class="button">Join now</a>
-    </div>
-  </div>
   
         <div class="item">
     <img src="/file/cp.png" alt="Coinpayz">
@@ -291,6 +269,29 @@ List Faucet
      <a href="https://coinpayz.xyz/?r=155318" class="button">Join now</a>
     </div>
   </div>
+   
+
+  
+         <div class="item">
+    <img src="/file/fs.png" alt="Faucetspeedbtc">
+    <h2>Faucet Speed BTC</h2>
+    <div class="description">
+      <p>$0.0006+ every 4 minutes. RecaptchaV3</p>
+      <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
+      <p>$0.05 minimum payout to FaucetPay and Binance.</p>
+     <a href="https://faucetspeedbtc.com/?r=11499" class="button">Join now</a>
+    </div>
+  </div>
+
+                <div class="item">
+    <img src="/file/cv.ico" alt="cryptovie">
+            <h2>Crypto Vie</h2>
+    <div class="description">
+       <p>$0.0008 every 5 minutes. Only 5 claims.</p>
+      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.01 minimum payout to FaucetPay.</p>
+     <a href="https://cryptoviefaucet.com/?r=1787" class="button">Join now</a>
+    </div></div>
   
   <div class="item">
     <img src="/file/cgame.png" alt="Cryptogames">
@@ -369,10 +370,9 @@ List Faucet
     <img src="/file/1co.ico" alt="1xbitcoins">
     <h2>1xbitcoins</h2>
     <div class="description">
-      <p>Claim 5 faucets every 5 minutes.</p>
       <p>1 satoshi faucet with no timer.</p>
       <p>Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.05 minimum payout to FaucetPay and Cwallet.</p>
+      <p>2000 satoshi payout to FaucetPay and Cwallet. Multiple coins option.</p>
      <a href="https://1xbitcoins.com/?r=listfaucet" class="button">Join now</a>
     </div>
   </div>
@@ -385,7 +385,7 @@ List Faucet
     <img src="/file/bad.ico" alt="Btcadspace">
     <h2>Btcadspace</h2>
     <div class="description">
-      <p>1 satoshi every 4 minutes.</p>
+      <p>1 satoshi every 0 minute.</p>
       <p>PTC, Shortlinks and Offerwalls.</p>
       <p>100 satoshi minimum payout to FaucetPay.</p>
      <a href="https://btcadspace.com/ref/tsaroz" class="button">Join now</a>
