--- a/index.html
+++ b/index.html
@@ -220,6 +220,17 @@ List Faucet
      <a href="https://spaceshooter.net/?r=28035" class="button">Join now</a>
     </div>
   </div>
+  
+             <div class="item">
+    <img src="/file/ftop.png" alt="Feyorra.top">
+    <h2>Feyorra.top</h2>
+    <div class="description">
+      <p>1 satoshi every 3 minutes.</p>
+      <p>No timer faucet, Offerwalls. Shortlinks, PTC.</p>
+      <p>25 satoshi minimum payout to FaucetPay.</p>
+     <a href="https://feyorra.top/?r=180567" class="button">Join now</a>
+    </div>
+  </div>
 
       <div class="item">
     <img src="/file/lita.png" alt="Litefaucet">
@@ -407,16 +418,6 @@ List Faucet
     </div>
   </div>
   
-       <div class="item">
-    <img src="/file/xtra.png" alt="xtrabits">
-    <h2>Xtrabit</h2> 
-    <div class="description">
-      <p>$0.0005 every 5 minutes.</p>
-      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.1 minimum payout.</p>
-     <a href="https://xtrabits.click/?r=17371" class="button">Join now</a>
-    </div>
-  </div>
 
 
     
