--- a/index.html
+++ b/index.html
@@ -391,19 +391,14 @@ List Faucet
 
 
 
-  
-
-  
-
-  
-        <div class="item">
-    <img src="/file/bad.ico" alt="Btcadspace">
-    <h2>Btcadspace</h2>
+       <div class="item">
+    <img src="/file/xtra.png" alt="xtrabits">
+    <h2>Xtrabit</h2> 
     <div class="description">
-      <p>1 satoshi every 0 minute.</p>
-      <p>PTC, Shortlinks and Offerwalls.</p>
-      <p>100 satoshi minimum payout to FaucetPay.</p>
-     <a href="https://btcadspace.com/ref/tsaroz" class="button">Join now</a>
+      <p>$0.0005 every 5 minutes.</p>
+      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.1 minimum payout.</p>
+     <a href="https://xtrabits.click/?r=17371" class="button">Join now</a>
     </div>
   </div>
   
