--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ List Faucet
     <div class="description">
       <p>$0.0005 every 5 minutes.</p>
       <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.1 minimum payout.</p>
+      <p>$0.01 minimum payout to Faucetpay.</p>
      <a href="https://xtrabits.click/?r=17371" class="button">Join now</a>
     </div>
   </div>
