--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@ List Faucet
     <img src="/file/lita.png" alt="Litefaucet">
     <h2>Litefaucet</h2>
     <div class="description">
-      <p>$0.0005 every 5 minutes.</p>
+      <p>$0.0005 every 5 minutes. Need to do 3 Shortlinks and 5 PTC to start using faucet.</p>
       <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
       <p>$0.05 minimum payout to FaucetPay.</p>
      <a href="https://litefaucet.in/?r=10979" class="button">Join now</a>
