--- a/index.html
+++ b/index.html
@@ -232,6 +232,62 @@ List Faucet
     </div>
   </div>
   
+          <div class="item">
+    <img src="/file/cp.png" alt="Coinpayz">
+    <h2>Coinpayz</h2>
+    <div class="description">
+      <p>$0.0005+ every 5 minutes. Easy captcha.</p>
+      <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
+      <p>$0.05 minimum payout to FaucetPay, Payeer and Wallet.</p>
+     <a href="https://coinpayz.xyz/?r=155318" class="button">Join now</a>
+    </div>
+  </div>
+  
+    <div class="item">
+    <img src="/file/adbtc.jpg" alt="Adbtc">
+    <h2>Adbtc</h2>
+    <div class="description">
+      <p>Highest paying bitcoin PTC.</p>
+      <p>100+ satoshi in 5 minutes.</p>
+      <p>500 satoshi minimum payout to Faucetpay.</p>
+      <a href="https://r.adbtc.top/7297" class="button">Join now</a>
+    </div>
+  </div>
+  
+        <div class="item">
+    <img src="/file/bpd.png" alt="Bitupdate">
+    <h2>Bitupdate</h2>
+    <div class="description">
+      <p>$0.0006 every 5 minutes.</p>
+      <p>Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.05 minimum payout to FaucetPay.</p>
+     <a href="https://bitupdate.info/?r=2753" class="button">Join now</a>
+    </div>
+  </div>
+  
+    <div class="item">
+    <img src="/file/cgame.png" alt="Cryptofarm">
+    <h2>Crypto Farms</h2>
+    <div class="description">
+      <p>$0.0006+ every 5 minutes.</p>
+      <p>Task, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.005 minimum payout to FaucetPay.</p>
+     <a href="https://crypto-farms.site/?r=2213" class="button">Join now</a>
+    </div>
+  </div>
+
+  
+        <div class="item">
+    <img src="/file/lita.png" alt="Litefaucet">
+    <h2>Litefaucet</h2>
+    <div class="description">
+      <p>$0.0005 every 5 minutes. Need to do 3 Shortlinks and 5 PTC to start using faucet.</p>
+      <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
+      <p>$0.05 minimum payout to FaucetPay.</p>
+     <a href="https://litefaucet.in/?r=10979" class="button">Join now</a>
+    </div>
+  </div>
+  
            <div class="item">
     <img src="/file/fs.png" alt="Faucetspeedbtc">
     <h2>Faucet Speed BTC</h2>
@@ -253,17 +309,6 @@ List Faucet
      <a href="https://cryptoviefaucet.com/?r=1787" class="button">Join now</a>
     </div></div>
 
-        <div class="item">
-    <img src="/file/cp.png" alt="Coinpayz">
-    <h2>Coinpayz</h2>
-    <div class="description">
-      <p>$0.0005+ every 5 minutes. Easy captcha.</p>
-      <p>Offerwalls. Daily Bonus, Shortlinks, PTC.</p>
-      <p>$0.05 minimum payout to FaucetPay, Payeer and Wallet.</p>
-     <a href="https://coinpayz.xyz/?r=155318" class="button">Join now</a>
-    </div>
-  </div>
-  
   
 
   
@@ -278,41 +323,7 @@ List Faucet
     </div>
   </div>
   
-
   
-  <div class="item">
-    <img src="/file/adbtc.jpg" alt="Adbtc">
-    <h2>Adbtc</h2>
-    <div class="description">
-      <p>Highest paying bitcoin PTC.</p>
-      <p>100+ satoshi in 5 minutes.</p>
-      <p>500 satoshi minimum payout to Faucetpay.</p>
-      <a href="https://r.adbtc.top/7297" class="button">Join now</a>
-    </div>
-  </div>
-  
-  <div class="item">
-    <img src="/file/cgame.png" alt="Cryptogames">
-    <h2>Crypto Farms</h2>
-    <div class="description">
-      <p>$0.0006+ every 5 minutes.</p>
-      <p>Task, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.005 minimum payout to FaucetPay.</p>
-     <a href="https://crypto-farms.site/?r=2213" class="button">Join now</a>
-    </div>
-  </div>
-
-  
-        <div class="item">
-    <img src="/file/lita.png" alt="Litefaucet">
-    <h2>Litefaucet</h2>
-    <div class="description">
-      <p>$0.0005 every 5 minutes. Need to do 3 Shortlinks and 5 PTC to start using faucet.</p>
-      <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
-      <p>$0.05 minimum payout to FaucetPay.</p>
-     <a href="https://litefaucet.in/?r=10979" class="button">Join now</a>
-    </div>
-  </div>
   
      <div class="item">
     <img src="/file/final.png" alt="dutchy">
@@ -337,32 +348,10 @@ List Faucet
   </div>
   
 
-
-  
-      <div class="item">
-    <img src="/file/bpd.png" alt="Bitupdate">
-    <h2>Bitupdate</h2>
-    <div class="description">
-      <p>$0.0006 every 5 minutes.</p>
-      <p>Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.05 minimum payout to FaucetPay.</p>
-     <a href="https://bitupdate.info/?r=2753" class="button">Join now</a>
-    </div>
-  </div>
-  
-
-  
-
-  
-
   <!-- Add more items as needed -->
   
 
-
-  
-
-  
-    
+   
     <div class="item">
     <img src="/file/cpu.png" alt="Coinpayu">
     <h2>Coinpayu</h2>
