--- a/index.html
+++ b/index.html
@@ -221,6 +221,17 @@ List Faucet
     </div>
   </div>
   
+            <div class="item">
+    <img src="/file/hate.ico" alt="Hatecoin">
+    <h2>Coinpayz</h2>
+    <div class="description">
+      <p>$0.0007+ every 5 minutes. RecaptchaV3.</p>
+      <p>Offerwalls, Shortlinks, PTC.</p>
+      <p>$0.05 minimum payout to FaucetPay, Payeer and Binance.</p>
+     <a href="https://hatecoin.me/?r=52066" class="button">Join now</a>
+    </div>
+  </div>
+  
              <div class="item">
     <img src="/file/ftop.png" alt="Feyorra.top">
     <h2>Feyorra.top</h2>
