--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ List Faucet
   
             <div class="item">
     <img src="/file/hate.ico" alt="Hatecoin">
-    <h2>Coinpayz</h2>
+    <h2>Hatecoin</h2>
     <div class="description">
       <p>$0.0007+ every 5 minutes. RecaptchaV3.</p>
       <p>Offerwalls, Shortlinks, PTC.</p>
