--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ List Faucet
   </div>
   
             <div class="item">
-    <img src="/file/hate.ico" alt="Hatecoin">
+    <img src="/file/hate.png" alt="Hatecoin">
     <h2>Hatecoin</h2>
     <div class="description">
       <p>$0.0007+ every 5 minutes. RecaptchaV3.</p>
