--- a/index.html
+++ b/index.html
@@ -429,8 +429,7 @@ List Faucet
   </div>
 
     <div><iframe data-aa='2298644' src='//ad.a-ads.com/2298644?size=300x250' style='width:300px; height:250px; border:0px; padding:0; overflow:hidden; background-color: transparent;'></iframe></div>
-  
   </div>
-  
+  Contact us : mail.listfaucet@gmail.com
 </body>
 </html>
