--- a/index.html
+++ b/index.html
@@ -276,16 +276,7 @@ List Faucet
     </div>
   </div>
   
-    <div class="item">
-    <img src="/file/cgame.png" alt="Cryptofarm">
-    <h2>Crypto Farms</h2>
-    <div class="description">
-      <p>$0.0006+ every 5 minutes.</p>
-      <p>Task, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.005 minimum payout to FaucetPay.</p>
-     <a href="https://crypto-farms.site/?r=2213" class="button">Join now</a>
-    </div>
-  </div>
+
 
   
         <div class="item">
@@ -376,16 +367,7 @@ List Faucet
 
 
 
-       <div class="item">
-    <img src="/file/xtra.png" alt="xtrabits">
-    <h2>Xtrabit</h2> 
-    <div class="description">
-      <p>$0.0005 every 5 minutes.</p>
-      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.01 minimum payout to Faucetpay.</p>
-     <a href="https://xtrabits.click/?r=17371" class="button">Join now</a>
-    </div>
-  </div>
+       
   
        <div class="item">
     <img src="/file/cc.svg" alt="Claimer Corner">
@@ -398,7 +380,27 @@ List Faucet
     </div>
   </div>
   
-
+    <div class="item">
+    <img src="/file/ltcf.png" alt="LTCFaucet">
+    <h2>Crypto Farms</h2>
+    <div class="description">
+      <p>$0.0005 every 5 minutes.</p>
+      <p>Task, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.05 minimum payout to FaucetPay.</p>
+     <a href="https://ltcfaucet.io/?r=9794" class="button">Join now</a>
+    </div>
+  </div>
+  
+  <div class="item">
+    <img src="/file/xtra.png" alt="xtrabits">
+    <h2>Xtrabit</h2> 
+    <div class="description">
+      <p>$0.0005 every 5 minutes.</p>
+      <p>Daily bonus, Shortlinks, PTC, Offerwalls.</p>
+      <p>$0.01 minimum payout to Faucetpay.</p>
+     <a href="https://xtrabits.click/?r=17371" class="button">Join now</a>
+    </div>
+  </div>
 
     
             <div class="item">
