--- a/index.html
+++ b/index.html
@@ -334,13 +334,13 @@ List Faucet
   
 
      <div class="item">
-    <img src="/file/cgame.png" alt="Cryptogames">
-    <h2>Crypto Farms</h2>
+    <img src="/file/cearn.png" alt="Cryptoearns">
+    <h2>Crypto Earns</h2>
     <div class="description">
-      <p>$0.0006+ every 5 minutes.</p>
-      <p>Task, Shortlinks, PTC, Offerwalls.</p>
-      <p>$0.005 satoshi minimum payout to FaucetPay.</p>
-     <a href="  https://crypto-farms.site/?r=2213" class="button">Join now</a>
+      <p>$0.0003+ every 3 minutes.</p>
+      <p>Coupon, Shortlinks, PTC, Offerwalls.</p>
+      <p>No minimum payout to FaucetPay.</p>
+     <a href="https://cryptoearns.com/?r=41208" class="button">Join now</a>
     </div>
   </div>
 
