--- a/index.html
+++ b/index.html
@@ -205,9 +205,9 @@ List Faucet
     <img src="/file/ftop.png" alt="Feyorra.top">
     <h2>Feyorra.top</h2>
     <div class="description">
-      <p>0.7 satoshi every 3 minutes.</p>
+      <p>$0.0006 every 4 minutes.</p>
       <p>Offerwalls. Shortlinks, PTC.</p>
-      <p>25 satoshi minimum payout to FaucetPay.</p>
+      <p>$0.01 minimum payout to FaucetPay.</p>
      <a href="https://feyorra.top/?r=180567" class="button">Join now</a>
     </div>
   </div>
