--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ List Faucet
     <img src="/file/ftop.png" alt="Feyorra.top">
     <h2>Feyorra.top</h2>
     <div class="description">
-      <p>$0.00055 every 4 minutes.</p>
+      <p>$0.00055 every 4 minutes. Easy captcha. RecaptchaV3 or RScaptcha.</p>
       <p>Offerwalls. Shortlinks, PTC.</p>
       <p>$0.01 minimum payout to FaucetPay.</p>
      <a href="https://feyorra.top/?r=180567" class="button">Join now</a>
@@ -216,7 +216,7 @@ List Faucet
     <img src="/file/ooter.png" alt="SpaceShooter">
     <h2>Space Shooter</h2>
     <div class="description">
-      <p>$0.0008 every 5 minutes. Need to do 3 shortlinks to continue faucet.</p>
+      <p>$0.0008 every 5 minutes. Need to do 3 shortlinks to continue faucet</p>
       <p>Task, Shortlinks, Quiz, PTC, Offerwalls.</p>
       <p>$0.001 minimum payout to FaucetPay.</p>
      <a href="https://spaceshooter.net/?r=28035" class="button">Join now</a>
