--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ List Faucet
     <img src="/file/ftop.png" alt="Feyorra.top">
     <h2>Feyorra.top</h2>
     <div class="description">
-      <p>$0.00055 every 4 minutes. Easy captcha. RecaptchaV3 or RScaptcha.</p>
+      <p>$0.0007 every 4 minutes. Easy captcha.</p>
       <p>Offerwalls. Shortlinks, PTC.</p>
       <p>$0.01 minimum payout to FaucetPay.</p>
      <a href="https://feyorra.top/?r=180567" class="button">Join now</a>
