--- a/index.html
+++ b/index.html
@@ -316,9 +316,7 @@
                 <a target="_blank" href="https://simplebits.io/ref/n9Z908pvlxST">
                     <img src="https://simplebits.io/banners/sb300x250.gif" width="300" height="250" alt="SimpleBits Banner">
                 </a>
-                <a href="https://stake.com/?c=enter" target="_blank">
-                    <img src="/file/stake.gif" alt="Stake">
-                </a>
+                <iframe id='banner_advert_wrapper_552' src='https://api.fpadserver.com/banner?id=552&size=300x250' width='300px' height='250px' frameborder='0'></iframe>
                 <script src="//static.surfe.pro/js/net.js"></script>
                 <ins class="surfe-be" data-sid="385863"></ins>
                 <script>(adsurfebe = window.adsurfebe || []).push({});</script>
